[package]
name = "inundatio"
version = "0.1.0"
authors = ["BrokenKeyboard"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tinyvec = "1.0.1"

[profile.release]
debug = true